# person_detector

./: .gitignore  README.md  audio_SVM.txt  fusion_Late_LR.txt  image_SVM.txt  inference.ipynb  pyproject.toml  requirements.txt
src/: dataset.py  features.py  predict.py  train.py  validation.py
src/conf/: config.yaml
src/dataset/: data_loader.py
src/features/: audio_features.py  image_features.py
src/models/: base.py  fusion.py  gmm.py  lda.py  mlp.py  svm.py
src/utils/: colored_formatter.py  logger.py  signal.py
