[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gender_detector"
version = "0.1.0"
description = "Multimodal face and voice gender detection pipeline"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scikit-learn",
    "scikit-image",
    "hydra-core",
    "omegaconf",
    "matplotlib"
]

# Tells setuptools to look inside the 'src' directory for your modules
[tool.setuptools.packages.find]
where = ["src"]